--- a/srcs/requirements/frontend/index.html
+++ b/srcs/requirements/frontend/index.html
@@ -1,12 +1,34 @@
 <!-- 디렉터리 앞에 "static/" 을 추가해 주어야 한다. -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pong</title>
+    <link rel="stylesheet" href="./css/style.css" type="text/css">
 </head>
+
 <body>
-    <script src="src/store.js" type="module"></script>
+    <h1>Pong</h1>
+    <form class="login-class">
+        <input type="text" placeholder="email">
+        <input type="text" placeholder="password">
+        <input type="submit" value="Login">
+    </form>
+    <button>Signup</button>
+    <form class="signup none">
+        <input type="text" placeholder="email">
+        <input type="text" placeholder="password">
+        <input type="text" placeholder="username">
+        <input type="submit" value="signup">
+    </form>
+    <div class="main none">
+        <button>토너먼트 개최</button>
+        <button>토너먼트 결과</button>
+        <button>게임 시작</button>
+    </div>
+    <script src="src/login.js" type="module"></script>
 </body>
+
 </html>
