[FEAT] 클래스 분할 진행중

--- a/srcs/requirements/frontend/index.html
+++ b/srcs/requirements/frontend/index.html
@@ -25,13 +25,16 @@
             </form>
         </div>
         <div class="signup none">
-            <button>signup</button>
             <form>
                 <input type="text" placeholder="email">
                 <input type="text" placeholder="password">
                 <input type="text" placeholder="username">
                 <input type="submit" value="signup">
             </form>
+        </div>
+        <div class="switch">
+            <button>signup</button>
+            <button class="none">login</button>
         </div>
     </div>
 
