[FEAT] 로그인 페이지, 로그아웃 페이지 분리

--- a/srcs/requirements/frontend/index.html
+++ b/srcs/requirements/frontend/index.html
@@ -17,25 +17,23 @@
 
     <!-- 로그인 페이지 -->
     <div class="login-page">
-        <div class="login">
-            <form>
-                <input type="text" placeholder="email">
-                <input type="text" placeholder="password">
-                <input type="submit" value="login">
-            </form>
-        </div>
-        <div class="signup none">
-            <form>
-                <input type="text" placeholder="email">
-                <input type="text" placeholder="password">
-                <input type="text" placeholder="username">
-                <input type="submit" value="signup">
-            </form>
-        </div>
-        <div class="switch">
-            <button>signup</button>
-            <button class="none">login</button>
-        </div>
+        <form>
+            <input type="text" placeholder="email">
+            <input type="text" placeholder="password">
+            <input type="submit" value="login">
+        </form>
+        <button>signup</button>
+    </div>
+
+    <!-- 회원가입 페이지 -->
+    <div class="signup-page none">
+        <form>
+            <input type="text" placeholder="email">
+            <input type="text" placeholder="password">
+            <input type="text" placeholder="username">
+            <input type="submit" value="signup">
+        </form>
+        <button>login</button>
     </div>
 
     <!-- 메인 페이지 -->
