[FEAT] Main Page

--- a/srcs/requirements/frontend/index.html
+++ b/srcs/requirements/frontend/index.html
@@ -38,13 +38,27 @@
 
     <!-- 메인 페이지 -->
     <div class="main-page none">
-        <button>토너먼트 개최</button>
-        <button>토너먼트 결과</button>
-        <button>게임 시작</button>
+        <div>
+            <button id="logout">Logout</button>
+        </div>
+        <div>
+            <button id="participate">Participate Tournament</button>
+        </div>
+        <div>
+            <button id="tournamentResult">Tournament Result</button>
+        </div>
+        <div>
+            <button id="matchmaking">Matchmaking</button>
+        </div>
+    </div>
+
+    <!-- 매치 메이킹 페이지 -->
+    <div class="match-making-page none">
+
     </div>
 
     <!-- 토너먼트 대기방 페이지 -->
-    <div class="tour-room-page none">
+    <div class="match-making-page none">
 
     </div>
 
