--- a/srcs/requirements/frontend/index.html
+++ b/srcs/requirements/frontend/index.html
@@ -58,7 +58,7 @@
     </div>
 
     <!-- 토너먼트 대기방 페이지 -->
-    <div class="match-making-page none">
+    <div class="tour-room-page none">
 
     </div>
 
