[FEAT] separated LoginInfo, SignupInfo from Info

--- a/srcs/requirements/frontend/index.html
+++ b/srcs/requirements/frontend/index.html
@@ -18,8 +18,8 @@
     <!-- 로그인 페이지 -->
     <div class="login-page">
         <form>
-            <input type="text" placeholder="email">
-            <input type="text" placeholder="password">
+            <input id="email" type="text" placeholder="email">
+            <input id="password" type="text" placeholder="password">
             <input type="submit" value="login">
         </form>
         <button>signup</button>
@@ -28,9 +28,9 @@
     <!-- 회원가입 페이지 -->
     <div class="signup-page none">
         <form>
-            <input type="text" placeholder="email">
-            <input type="text" placeholder="password">
-            <input type="text" placeholder="username">
+            <input id="email" type="text" placeholder="email">
+            <input id="password" type="text" placeholder="password">
+            <input id="username" type="text" placeholder="username">
             <input type="submit" value="signup">
         </form>
         <button>login</button>
