--- a/srcs/requirements/frontend/index.html
+++ b/srcs/requirements/frontend/index.html
@@ -59,12 +59,12 @@
 
     <!-- 토너먼트 대기방 페이지 -->
     <div class="tour-room-page none">
-        <div></div>
+        <button>메인페이지로 가기</button>
     </div>
 
     <!-- 토너먼트 결과 페이지 -->
     <div class="tour-result-page none">
-
+        <button>메인페이지로 가기</button>
     </div>
 
     <!-- 퐁 게임 페이지 -->
