[FEAT] TourEntryPage implemented

--- a/srcs/requirements/frontend/index.html
+++ b/srcs/requirements/frontend/index.html
@@ -57,9 +57,25 @@
 
     </div>
 
+    <!-- 토너먼트 방 리스트 페이지 -->
+    <div class="tour-list-page none">
+        <button id="to-main">메인페이지로 가기</button>
+    </div>
+
+    <!-- 토너먼트 닉네임 입력 페이지 -->
+    <div class="tour-entry-page none">
+        <button id="to-main">메인페이지로 가기</button>
+        <button id="to-list">뒤로 가기</button>
+        <form>
+            <input id="nickname" type="text" placeholder="nickname">
+            <input type="submit" value="enter">
+        </form>
+    </div>
+
     <!-- 토너먼트 대기방 페이지 -->
     <div class="tour-room-page none">
-        <button>메인페이지로 가기</button>
+        <button id="to-main">메인페이지로 가기</button>
+        <button id="to-list">방 나가기</button>
     </div>
 
     <!-- 토너먼트 결과 페이지 -->
