[FEAT] Final Protype

--- a/srcs/requirements/frontend/index.html
+++ b/srcs/requirements/frontend/index.html
@@ -16,7 +16,8 @@
     </div>
 
     <!-- 로그인 페이지 -->
-    <div class="login-page">
+    <div class="auth-page">
+        <div></div>
         <form>
             <input id="email" type="text" placeholder="email">
             <input id="password" type="text" placeholder="password">
@@ -57,9 +58,10 @@
 
     </div>
 
-    <!-- 토너먼트 방 리스트 페이지 -->
-    <div class="tour-list-page none">
+    <!-- 토너먼트 방 페이지 -->
+    <div class="tour-room-page none">
         <button id="to-main">메인페이지로 가기</button>
+        <div></div>
     </div>
 
     <!-- 토너먼트 닉네임 입력 페이지 -->
