[FEAT] LoginSubpage, SignupSubpage

--- a/srcs/requirements/frontend/index.html
+++ b/srcs/requirements/frontend/index.html
@@ -10,34 +10,17 @@
 </head>
 
 <body>
-    <!-- 타이틀 -->
+    <!-- Title -->
     <div class="title">
         <h1>Pong</h1>
     </div>
 
-    <!-- 로그인 페이지 -->
+    <!-- Auth Page -->
     <div class="auth-page">
         <div></div>
-        <form>
-            <input id="email" type="text" placeholder="email">
-            <input id="password" type="text" placeholder="password">
-            <input type="submit" value="login">
-        </form>
-        <button>signup</button>
     </div>
 
-    <!-- 회원가입 페이지 -->
-    <div class="signup-page none">
-        <form>
-            <input id="email" type="text" placeholder="email">
-            <input id="password" type="text" placeholder="password">
-            <input id="username" type="text" placeholder="username">
-            <input type="submit" value="signup">
-        </form>
-        <button>login</button>
-    </div>
-
-    <!-- 메인 페이지 -->
+    <!-- Main Page -->
     <div class="main-page none">
         <div>
             <button id="logout">Logout</button>
@@ -60,13 +43,12 @@
 
     <!-- 토너먼트 방 페이지 -->
     <div class="tour-room-page none">
-        <button id="to-main">메인페이지로 가기</button>
+        <button>메인페이지로 가기</button>
         <div></div>
     </div>
 
     <!-- 토너먼트 닉네임 입력 페이지 -->
     <div class="tour-entry-page none">
-        <button id="to-main">메인페이지로 가기</button>
         <button id="to-list">뒤로 가기</button>
         <form>
             <input id="nickname" type="text" placeholder="nickname">
