[MODIFY] html modified, import path fixed

--- a/srcs/requirements/frontend/index.html
+++ b/srcs/requirements/frontend/index.html
@@ -38,18 +38,19 @@
 
     <!-- 매치 메이킹 페이지 -->
     <div class="match-making-page none">
-
+        <button>메인 페이지로 가기</button>
+        <div></div>
     </div>
 
     <!-- 토너먼트 방 페이지 -->
     <div class="tour-room-page none">
-        <button>메인페이지로 가기</button>
+        <button>메인 페이지로 가기</button>
         <div></div>
     </div>
 
     <!-- 토너먼트 결과 페이지 -->
     <div class="tour-result-page none">
-        <button>메인페이지로 가기</button>
+        <button>메인 페이지로 가기</button>
     </div>
 
     <!-- 퐁 게임 페이지 -->
