[Modify] html file modified with new temp specification

--- a/srcs/requirements/frontend/index.html
+++ b/srcs/requirements/frontend/index.html
@@ -36,14 +36,8 @@
         </div>
     </div>
 
-    <!-- 매치 메이킹 페이지 -->
-    <div class="match-making-page none">
-        <button>메인 페이지로 가기</button>
-        <div></div>
-    </div>
-
     <!-- 토너먼트 방 페이지 -->
-    <div class="tour-room-page none">
+    <div class="tour-lobby-page none">
         <button>메인 페이지로 가기</button>
         <div></div>
     </div>
