[MODIFY] changed based on meeting result

--- a/srcs/requirements/frontend/index.html
+++ b/srcs/requirements/frontend/index.html
@@ -36,18 +36,18 @@
         </div>
     </div>
 
-    <!-- 토너먼트 방 페이지 -->
+    <!-- Tournament Lobby Page -->
     <div class="tour-lobby-page none">
         <button>메인 페이지로 가기</button>
         <div></div>
     </div>
 
-    <!-- 토너먼트 결과 페이지 -->
+    <!-- Tournament Result Page -->
     <div class="tour-result-page none">
         <button>메인 페이지로 가기</button>
     </div>
 
-    <!-- 퐁 게임 페이지 -->
+    <!-- Pong Game Page -->
     <div class="game-page none">
 
     </div>
