--- a/srcs/requirements/frontend/index.html
+++ b/srcs/requirements/frontend/index.html
@@ -52,7 +52,7 @@
 
     </div>
 
-    <script src="js/login.js" type="module"></script>
+    <script src="js/main.js" type="module"></script>
 </body>
 
 </html>
