[Modify] init bug fixed

--- a/srcs/requirements/frontend/index.html
+++ b/srcs/requirements/frontend/index.html
@@ -34,6 +34,7 @@
         <div>
             <button id="matchmaking">Matchmaking</button>
         </div>
+        <div id="voidmain"></div>
     </div>
 
     <!-- Tournament Lobby Page -->
