[Modify] rename : matchmaking -> normal game

--- a/srcs/requirements/frontend/index.html
+++ b/srcs/requirements/frontend/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Title -->
     <div class="title">
-        <h1>Pong</h1>
+        <h1>PONG</h1>
     </div>
 
     <!-- Auth Page -->
@@ -37,7 +37,12 @@
 
     <!-- Pong Game Page -->
     <div class="game-page none">
+        <div></div>
+    </div>
 
+    <!-- Normal Game Page -->
+    <div class="normal-page none">
+        <div></div>
     </div>
 
     <script src="js/main.js" type="module"></script>
