[FEAT] design implemented by bootstrap added

--- a/srcs/requirements/frontend/index.html
+++ b/srcs/requirements/frontend/index.html
@@ -7,45 +7,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pong</title>
     <link rel="stylesheet" href="./css/style.css" type="text/css">
+
+    <!-- for bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
-    <!-- Title -->
-    <div class="title">
-        <h1>PONG</h1>
-    </div>
+    <div class="co_main co_frame"
+        <!-- Title -->
+        <div class="title d-flex justify-content-center mt-5">
+            <h1 class="display-2 fw-bold z_highest">PONG</h1>
+        </div>
+        <div class="co_line2"></div>
+        <div class="co_line3"></div>
+        <div class="co_line5"></div>
+        <div class="co_ball1"></div>
+        <div class="co_ball2"></div>
+        <div class="co_ball3"></div>
 
-    <!-- Auth Page -->
-    <div class="auth-page">
-        <div></div>
-    </div>
+        <!-- Auth Page -->
+        <div class="auth-page">
+            <div></div>
+        </div>
 
-    <!-- Main Page -->
-    <div class="main-page none">
-        <div></div>
-    </div>
+        <!-- Main Page -->
+        <div class="main-page none">
+            <div></div>
+        </div>
 
-    <!-- Tournament Lobby Page -->
-    <div class="tour-lobby-page none">
-        <div></div>
-    </div>
+        <!-- Tournament Lobby Page -->
+        <div class="tour-lobby-page none">
+            <div></div>
+        </div>
 
-    <!-- Tournament Result Page -->
-    <div class="tour-result-page none">
-        <div></div>
-    </div>
+        <!-- Tournament Result Page -->
+        <div class="tour-result-page none">
+            <div></div>
+        </div>
 
-    <!-- Pong Game Page -->
-    <div class="game-page none">
-        <div></div>
-    </div>
+        <!-- Pong Game Page -->
+        <div class="game-page none">
+            <div></div>
+        </div>
 
-    <!-- Normal Game Page -->
-    <div class="normal-page none">
-        <div></div>
+        <!-- Normal Game Page -->
+        <div class="normal-page none">
+            <div></div>
+        </div>
     </div>
 
     <script src="js/main.js" type="module"></script>
+
+    <!-- for bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
