[FEAT] instantiated normal lobby subpages

--- a/srcs/requirements/frontend/index.html
+++ b/srcs/requirements/frontend/index.html
@@ -51,7 +51,7 @@
         </div>
 
         <!-- Normal Game Page -->
-        <div class="normal-page none">
+        <div class="normal-lobby-page none">
             <div></div>
         </div>
     </div>
