--- a/srcs/requirements/frontend/index.html
+++ b/srcs/requirements/frontend/index.html
@@ -16,7 +16,7 @@
     <div class="co_main co_frame"
         <!-- Title -->
         <div class="title d-flex justify-content-center mt-5">
-            <h1 class="display-2 fw-bold z_highest" id="titlePong">PONG</h1>
+            <h1 class="display-2 fw-bold z_highest pointer" id="titlePong">PONG</h1>
         </div>
         <div class="co_line2"></div>
         <div class="co_line3"></div>
