[TEMP] nickname modal prototype

--- a/srcs/requirements/frontend/index.html
+++ b/srcs/requirements/frontend/index.html
@@ -56,6 +56,35 @@
         </div>
     </div>
 
+    <!-- Modal -->
+    <div class="modal fade" id="loginModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-xl modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <h1 align="center">Logging in ...</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="nicknameModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <form>
+                    <div class="modal-header">
+                        <h5 class="modal-title">Enter your nickname</h5>
+                    </div>
+                    <div class="modal-body">
+                        <input type="text" id="nickname" class="form-control">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">Apply</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
     <script src="js/main.js" type="module"></script>
 
     <!-- for bootstrap -->
