--- a/srcs/requirements/frontend/index.html
+++ b/srcs/requirements/frontend/index.html
@@ -1,21 +1,97 @@
+<!-- 디렉터리 앞에 "static/" 을 추가해 주어야 한다. -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="static/style.css" type="text/css" />
+    <title>Pong</title>
+    <style type="text/css">
+        @import url("./static/css/style.css");
+    </style>
+    <!-- <link href="./static/css/style.css" type="text/css"> -->
+
+    <!-- for bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
 <body>
-    <div class="pong">
-        <div class="scoreboard">
-            <h1></h1>
-            <h1></h1>
-            <h1 class="none"></h1>
-            <h1 class="none"></h1>
+    <div class="co_main co_frame"
+        <!-- Title -->
+        <div class="title d-flex justify-content-center mt-5">
+            <h1 class="display-2 fw-bold z_highest pointer" id="titlePong">PONG</h1>
         </div>
-        <canvas width="500" height="500"></canvas>
+        <div class="co_line2"></div>
+        <div class="co_line3"></div>
+        <div class="co_line5"></div>
+        <div class="co_ball1"></div>
+        <div class="co_ball2"></div>
+        <div class="co_ball3"></div>
+
+        <!-- Auth Page -->
+        <div class="auth-page">
+            <div></div>
+        </div>
+
+        <!-- Main Page -->
+        <div class="main-page none">
+            <div></div>
+        </div>
+
+        <!-- Tournament Lobby Page -->
+        <div class="tour-lobby-page none">
+            <div></div>
+        </div>
+
+        <!-- Tournament Result Page -->
+        <div class="tour-result-page none">
+            <div></div>
+        </div>
+
+        <!-- Pong Game Page -->
+        <div class="game-page none">
+            <div></div>
+        </div>
+
+        <!-- Normal Game Page -->
+        <div class="normal-lobby-page none">
+            <div></div>
+        </div>
     </div>
-    <script src="static/pong.js"></script>
+
+    <!-- Modal -->
+    <div class="modal" id="loginModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-xl modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <h1 align="center">Logging in ...</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal" id="nicknameModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <form>
+                    <div class="modal-header">
+                        <h5 class="modal-title">Enter your nickname</h5>
+                    </div>
+                    <div class="modal-body">
+                        <input type="text" id="nickname" class="form-control">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">Apply</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <script src="./static/js/main.js" type="module"></script>
+
+    <!-- for bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
+
 </html>
