[HOTFIX] FE modal closeBtn id error fixed

--- a/srcs/django/static/index.html
+++ b/srcs/django/static/index.html
@@ -61,7 +61,7 @@
                         </div>
                         <div class="modal-inner-footer inner-padding">
                             <button type="submit">apply</button>
-                            <button id="closeBtn" type="button" data-dismiss="modal">close</button>
+                            <button class="closeBtn" type="button" data-dismiss="modal">close</button>
                         </div>
                     </div>
                 </form>
@@ -82,7 +82,7 @@
                         </div>
                         <div class="modal-inner-footer inner-padding">
                             <button type="submit">apply</button>
-                            <button id="closeBtn" type="button" data-dismiss="modal">close</button>
+                            <button class="closeBtn" type="button" data-dismiss="modal">close</button>
                         </div>
                     </div>
                 </form>
@@ -101,7 +101,7 @@
                         <div id="waiting-status"></div>
                     </div>
                     <div class="modal-inner-footer">
-                        <button id="closeBtn" type="button" data-dismiss="modal">leave</button>
+                        <button class="closeBtn" type="button" data-dismiss="modal">leave</button>
                     </div>
                 </div>
             </div>
